# apache-airflow-playground

./: . dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  airflow.cfg  compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
dags/: simple_dag.py
dags/csv_to_sql/: dag.py
data/: input.csv
plugins/csv_to_sql/Loaders/: csv.py
plugins/csv_to_sql/models/: basic_settings.py
plugins/operators/: operator_1.py
