[tool.poetry]
name = "apache-airflow-test"
version = "0.1.0"
description = ""
authors = ["K'  <51281148+K-dash@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
