[tool.poetry]
name = "apache-airflow-test"
version = "0.1.0"
description = ""
authors = ["K'  <51281148+K-dash@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.1"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# ruff global settings
[tool.ruff]
line-length = 79

# linter
[tool.ruff.lint]
# I: isort
# F: Pyflakes
# E: Pycodestyle Error
# W: Pycodestyle Warning
# P: Pylint
# PT: flake8-pytest-style
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

# formatter
[tool.ruff.format]
preview = true
quote-style = 'double'
